Adding CodePen code into website

--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
 <html>
+  <head>
+    <link rel = "https://cdn-icons-png.flaticon.com/512/5766/5766472.png">
+    <title> Jaelin's Website </title>
+  </head>
+  <body>
+    <ul>
+      <li><a href = "https://www.nytimes.com/games/wordle/index.html"> Daily Wordle </a> </li>
+      <li><a href = "https://code.org/"> CODE.ORG </a> </li>
+      <li><a href = "https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> Westview Homepage </a> </li>
+    <center>
+      
+    <h1> Welcome to APCSP Spring 2023 </h1>
+    <p> Jaelin's Code.org Projects <p>
+    <center>
+    <img src = https://www.insidehighered.com/sites/default/files/media/laptop-cloud-storage-shared-access-isometric-vector-id1063730694_0.jpg>
+    </img>
+<br>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/IAFko-G0Q3vIo4d6-q4sXI9AQ3cPhY3Q5mpTdaXbHNw/embed"></iframe>
+    <center>
+    <body>
+</html>
 
 
 
