adding style sheet

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <link rel = "https://cdn-icons-png.flaticon.com/512/5766/5766472.png">
     <title> Jaelin's Website </title>
   </head>
