--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,51 @@
+<html>
+  <head>
+    <center>
+    <ul>
+    <li><a href = "https://www.nytimes.com/games/wordle/index.html"> HOME </a> </li>
+    <li><a href = "https://www.nytimes.com/games/wordle/index.html"> ABOUT ME </a> </li>
+    <li><a href = "https://code.org/"> GAMES </a> </li>
+    <li><a href = "https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> APPS </a> </li>
+    <br>
+<p> ABOUT ME </p>
+      <img src = https://image.maxpreps.io/Gallery/BKW_irVs5Ue0pgu2EnPeNw/8ekmZNj_pkK8U_wjJ1VT8A/1,660,520/westview_del_norte_girls_basketball_image.jpg>
+     <br>
+      
+    <h2> Hello, my name is Jaelin Baylon. I am a senior at Westview High School. After High School I am attednding the University of Southern California in the Fall. There I will be studying Human Biology to focus on becoming a Physical Therapist. At USC I will also be a part of the Navy Reserve Officer Training Corp and will become a Naval Officer after I graduate. </h2>
+     </body>
+     </html>
+    
+    <style>
+ nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #F5EBE0;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+}
+ li {
+  float: left;
+ 
+}
 
+li a {
+  font-family: Copperplate, Fantasy;
+  display: block;
+  color: #27187E;
+  font-size: 30px;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  font-family: Copperplate, Fantasy;
+  background-color: #FF8600;
+  color: #27187E;
+}
+   </style>
+   
