About Me page.html

--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+     <link rel="stylesheet" href="style2.css">
+    
     <center>
     <ul>
     <li><a href = "https://www.nytimes.com/games/wordle/index.html"> HOME </a> </li>
