--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
    
    <body>
      <ul>
-    <li><a href = "https://www.nytimes.com/games/wordle/index.html"> ABOUT ME </a> </li>
-    <li><a href = "https://code.org/"> GAMES </a> </li>
-    <li><a href = "https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> APPS </a> </li>
+    <li><a href = "index.html"> HOME </a> </li>
+     <li><a href = "index2.html"> ABOUT ME </a> </li>
+    <li><a href = "index3.html"> GAMES </a> </li>
+    <li><a href = "index4.html"> APPS </a> </li>
     <br>
        
    <center>
