--- a/index2.html
+++ b/index2.html
@@ -3,12 +3,14 @@
      <link rel="stylesheet" href="style2.css">
     
     <center>
-    <ul>
-    <li><a href = "https://www.nytimes.com/games/wordle/index.html"> HOME </a> </li>
-    <li><a href = "https://www.nytimes.com/games/wordle/index.html"> ABOUT ME </a> </li>
-    <li><a href = "https://code.org/"> GAMES </a> </li>
-    <li><a href = "https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> APPS </a> </li>
+   <body>
+     <ul>
+    <li><a href = "index.html"> HOME </a> </li>
+     <li><a href = "index2.html"> ABOUT ME </a> </li>
+    <li><a href = "index3.html"> GAMES </a> </li>
+    <li><a href = "index4.html"> APPS </a> </li>
     <br>
+       
 <p> ABOUT ME </p>
       <img src = https://image.maxpreps.io/Gallery/BKW_irVs5Ue0pgu2EnPeNw/8ekmZNj_pkK8U_wjJ1VT8A/1,660,520/westview_del_norte_girls_basketball_image.jpg>
      <br>
